--- a/frontend/src/components/AuthButton/AuthButton.module.css
+++ b/frontend/src/components/AuthButton/AuthButton.module.css
@@ -49,3 +49,38 @@
     align-items: center;
     vertical-align: middle;
 }
+
+/* Mobile responsive design */
+@media (max-width: 768px) {
+    .authButton {
+        width: 90px;
+        height: 40px;
+        margin: 0 10px;
+    }
+
+    .i {
+        font-size: 18px;
+    }
+
+    .svg {
+        width: 22px;
+        height: 55px;
+    }
+}
+
+@media (max-width: 480px) {
+    .authButton {
+        width: 80px;
+        height: 36px;
+        margin: 0 8px;
+    }
+
+    .i {
+        font-size: 16px;
+    }
+
+    .svg {
+        width: 20px;
+        height: 50px;
+    }
+}
