--- a/frontend/src/pages/LandingPage/LandingPage.module.css
+++ b/frontend/src/pages/LandingPage/LandingPage.module.css
@@ -5,14 +5,14 @@
 }
 
 .container {
-    min-height: 80vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 18px;
     max-width: 600px;
-    margin: 40px auto;
+    margin: 0 auto;
     padding: 2.5rem 2rem;
     position: relative;
 }
